--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ license = "WTFPL"
 [dependencies]
 base64 = "0.22.1"
 gloo = "0.11.0"
+humansize = "2.1.3"
+image = "0.25.8"
 js-sys = "0.3.81"
+once_cell = "1.21.3"
+pdfium-render = { version = "0.8.35", features = ["image"] }
 wasm-bindgen = "0.2.104"
-yew = "0.21.0"
+web-sys = { version = "0.3.81", features = ["DataTransfer"] }
+yew = { version = "0.21.0", features = ["csr"] }
