--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ license = "WTFPL"
 
 [dependencies]
 base64 = "0.22.1"
+console_error_panic_hook = "0.1.7"
 gloo = "0.11.0"
 humansize = "2.1.3"
 image = "0.25.8"
