--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ js-sys = "0.3.81"
 once_cell = "1.21.3"
 pdfium-render = { version = "0.8.35", features = ["image"] }
 wasm-bindgen = "0.2.104"
-web-sys = { version = "0.3.81", features = ["DataTransfer"] }
+web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob"] }
 yew = { version = "0.21.0", features = ["csr"] }
