--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ once_cell = "1.21.3"
 pdfium-render = { version = "0.8.35", features = ["image"] }
 wasm-bindgen = "0.2.104"
 web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob"] }
+web-time = "1.1.0"
 yew = { version = "0.21.0", features = ["csr"] }
