--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: actions/checkout@v4
 
-      - run: rustup toolchain install wasm32-unknown-unknown --profile minimal
+      - run: rustup toolchain install stable --profile minimal
 
       - uses: taiki-e/install-action@v2
         with:
