add wasm32 target

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -16,6 +16,8 @@ jobs:
 
       - run: rustup toolchain install stable --profile minimal
 
+      - run: rustup target add wasm32-unknown-unknown
+
       - uses: taiki-e/install-action@v2
         with:
           tool: trunk
