--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,13 @@ authors = ["Samuel Åkesson <sermuns@lysator.liu.se>"]
 license = "WTFPL"
 
 [dependencies]
-base64 = "0.22.1"
 console_error_panic_hook = "0.1.7"
 gloo = "0.11.0"
+hayro = "0.4.0"
+hayro-interpret = "0.4.0"
 humansize = "2.1.3"
 image = "0.25.8"
-js-sys = "0.3.81"
 once_cell = "1.21.3"
-pdfium-render = { version = "0.8.35", features = ["image"] }
 wasm-bindgen = "0.2.104"
 web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob"] }
 web-time = "1.1.0"
