--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -13,9 +13,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: dtolnay/rust-toolchain
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           targets: wasm32-unknown-unknown
 
       - uses: taiki-e/install-action@v2
