--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ humansize = "2.1.3"
 image = "0.25.8"
 once_cell = "1.21.3"
 wasm-bindgen = "0.2.104"
-web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob"] }
+web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob", "CssStyleDeclaration"] }
 web-time = "1.1.0"
 yew = { version = "0.21.0", features = ["csr"] }
