--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ wasm-bindgen = "0.2.104"
 web-sys = { version = "0.3.81", features = ["DataTransfer", "Blob"] }
 web-time = "1.1.0"
 yew = { version = "0.21.0", features = ["csr"] }
+yew-agent = "0.3.0"
 zip = { version = "6.0.0", default-features = false }
